# desilike-emulator

./: .gitignore  AGENTS.md  README.md  __init__.py  compare_scaled_unscaled.py  eval.py  eval_nn.py  hod.yaml  pyproject.toml  run_pipeline.py  scale_data.py  submit_generate_training_data.sh  submit_train.sh  test_cov_scaling.py  tracers.yaml  train.py  train_nn.py  util.py
autoresearch/: README.md  experiments.md  model.py  prepare.py  program.md  screen.py  train.py  validate.py
autoresearch/dev/: screen.py  validate.py
bao/: CHANGELOG.md  HOD.md  PREP_COVAR.md  README.md  VEFF_NOTES.md  aggregate_seed_sweep.py  alpha_sn_check.py  analyze_training_data.py  banded_cov_diagnostic.py  banded_cov_diagnostic_dr1.csv  compare_bundle_vs_ezmock_cov.py  compare_per_ell_b1_fix.py  compare_pipeline_theory_to_bundle.py  compare_pipeline_to_bundle.py  compare_theory_paths.py  compare_to_dr1_rigorous.py  comparison_plots.py  config_covar.py  config_space.py  core.py  cov_substitution_diag.py  desi_reference.py  desi_syst.py  emulator_vs_desi.py  fisher_sigmas.py  fkp_analytic_cov.py  fourier_space.py  generate_emulator_data.py  generate_training_data.sh  inspect_lrg_sigmas.py  mcmc.py  mcmc_bao.py  mcmc_bundle.py  mcmc_bundle_lrg2.py  mcmc_bundle_native_theory.py  mcmc_bundle_seed_sweep.py  mcmc_bundle_xi.py  mcmc_config.json  mcmc_config.py  mcmc_fourier.json  (+33 more)
bao/mcmc_results/: BGS_dr1.json  ELG2_dr1.json  LRG1_dr1.json  LRG2_dr1.json  LRG3_ELG1_dr1.json  QSO_dr1.json
shapefit/: model.py  model_config.yaml  prep_covar.py  prep_mean.py  run_prep_covar.sh  run_single_fisher.py
(+57 files in other folders)
